# ic-http-proxy

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json
examples/rust/basic/: Cargo.toml  README.md  canister_ids.json  deploy.sh  dfx.json
examples/rust/basic/src/basic_backend/: Cargo.toml
examples/rust/basic/src/basic_backend/src/: lib.rs
examples/rust/simple/: Cargo.toml  README.md  canister_ids.json  deploy.sh  dfx.json
examples/rust/simple/src/simple_backend/: Cargo.toml  simple_backend.did
ic-http-proxy-client/: .dockerignore  .env.example  README.md  build-and-push-docker.sh  bun.lockb  docker-compose.yml  index.ts  package.json
ic-http-proxy-client/src/: utils.ts
ic-http-proxy-client/src/canister/declarations/proxy_canister/: index.d.ts  proxy_canister.did.d.ts  proxy_canister.did.js
ic-http-request-executor/: .env.example  Dockerfile  README.md  build-and-push-docker.sh  bun.lockb  package.json
ic-http-request-executor/src/canister/declarations/proxy_canister/: index.js  proxy_canister.did.d.ts
scripts/: build-test-canisters.sh  deploy-proxy-canister.sh  download-pocket-ic.sh  integration-test.sh  test.sh  unit-test.sh
src/http_over_ws/: Cargo.toml
src/http_over_ws/src/: client_proxy.rs  handlers.rs  http_connection.rs  lib.rs  state.rs
src/http_over_ws/tests/: integration_tests.rs
src/http_over_ws/tests/test_canister/: Cargo.toml
src/http_over_ws/tests/test_canister/src/: canister.rs  lib.rs
src/http_over_ws/tests/utils/: actor.rs  mod.rs
src/logger/: Cargo.toml
src/logger/src/: lib.rs
src/proxy_canister/: Cargo.toml  proxy_canister.did
src/proxy_canister/src/: constants.rs  lib.rs  requests.rs  state.rs  utils.rs  ws.rs
src/proxy_canister/tests/: integration_tests.rs
src/proxy_canister/tests/test_user_canister/: Cargo.toml
src/proxy_canister/tests/test_user_canister/src/: lib.rs
src/proxy_canister/tests/utils/: actors.rs  constants.rs  mod.rs
src/proxy_canister_types/: Cargo.toml  proxy_canister_types.did
src/proxy_canister_types/src/: lib.rs
src/test_utils/: Cargo.toml
src/test_utils/src/: ic_env.rs  identity.rs  lib.rs  proxy_client.rs  rand.rs
